--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,13 +22,10 @@ html::-webkit-scrollbar-thumb {
 
 
 html{
-    background: linear-gradient(323deg, #42d1d1 0%, #2420d0 55%, #1ae754 100%);
-    background-size: 200% 200%;
-    background-repeat: no-repeat;
+   
     width: 100%;
     min-height: 101%;
-    animation: color-animation 5s  linear;
-    animation-fill-mode: forwards;
+   
   }
   @keyframes color-animation {
     from {
@@ -37,6 +34,18 @@ html{
     to {
         background-position: 0 0;
     }
+  }
+  .mainBackground{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(323deg, #42d1d1 0%, #2420d0 55%, #1ae754 100%);
+    background-size: 200% 200%;
+    background-repeat: no-repeat;
+    animation: color-animation 5s  linear;
+    animation-fill-mode: forwards;
+    z-index: -1;
   }
 
 .App{
