--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -51,6 +51,7 @@ html{
 .App{
     width: 100%;
     height: 130%;
+    background: linear-gradient(323deg, #42d1d1 0%, #2420d0 55%, #1ae754 100%);
 }
 
 
